# durable-ai-agent

./: .env.example  .gitignore  Agentic Loop Sample Run.md  Agriculture Query Samples.md  CLAUDE.md  CONVERSATION_CLEAN_UP.md  DURABLE_AI_OVERVIEW.md  Dockerfile.api  Dockerfile.worker  EFFICIENT_ALTS.md  FIX_STDIO.md  FRONT_END_TESTING.md  INT_CLEAN.md  LLM_MISTAKES.md  LOCAL_API.md  MCP Proxy Server Routing.md  OLD_README.md  PR_CLEANUP.md  README.md  REVIEW_WORKFLOW.md  SUMMARY_AGENT.md  cleanup.md  conversation_history.md  debug_connectivity.sh  debug_mcp_test.py  docker-compose.yml  final_review.md  fix-react.md  fix_mcp.md  just-agentic.md  proxy-fixing.md  pyproject.toml  q-proxy.md  run_docker.sh  run_wf.sh  run_wk.sh  streaming_proposal.md  streaming_proposal_v2.md  test_mcp_freeze.py  test_mcp_simple.py
activities/: __init__.py  agricultural_activity.py  event_finder_activity.py  extract_agent_activity.py  mcp_execution_activity.py  mcp_utils.py  monty_python_quote_activity.py  react_agent_activity.py  tool_execution_activity.py  weather_forecast_activity.py  weather_historical_activity.py
agentic_loop/: .env.example  README.md  __init__.py  demo_react_agent.py  extract_agent.py  react_agent.py
api/: __init__.py  main.py  streaming.py
api/services/: __init__.py  workflow_service.py
docker/: Dockerfile.agent  Dockerfile.agricultural  Dockerfile.base  Dockerfile.forecast  Dockerfile.historical  Dockerfile.mcp
docs/: ARCHITECTURE.md  CLIENT_ARCHITECTURE.md  CONFIGURATION_CLEANUP.md  DEVELOPMENT_GUIDE.md  DSPY_OVERVIEW.md  DSPy Overview.md  INTEGRATION_TESTS.md  LOCAL_API.md  mcp_integration_summary.md  mcp_tools_examples.md  mcp_tools_guide.md  monty_python_streaming_demo.md
frontend/: Dockerfile  nginx.conf  vite.config.js
frontend/src/: App.css  App.jsx  index.css
helpers/: conversation_helpers.py
integration_tests/: README.md  __init__.py  conftest.py  run_integration_tests.py  test_agriculture.py  test_agriculture_detailed.py  test_ai_tools_endpoint.py  test_api_e2e.py  test_api_endpoints.py  test_chat_api.py  test_chat_simple.py  test_http_client.py  test_mcp_client_discovery.py  test_mcp_connections.py  test_mcp_execution_activity.py  test_mcp_tools_direct.py  test_mcp_tools_e2e.py  test_mcp_weather_flow.py  test_multi_turn.py  test_proxy_integration.py  test_stdio_client.py  test_streaming_monty.py  test_weather_api.py  test_workflow_integration.py
integration_tests/utils/: __init__.py  api_client.py  test_helpers.py
mcp_proxy/: Dockerfile  __init__.py  docker-compose.yml  main.py  requirements.txt  run_and_test.sh  run_docker.sh  simple_proxy.py  start_server.py  stop_docker.sh  test_docker.sh  test_docker_proxy.py  test_proxy.sh  test_simple_proxy.py
mcp_proxy/services/: __init__.py  current_server.py  forecast_server.py  historical_server.py  manager.py
mcp_proxy/tests/: __init__.py  test_integration.py  test_mcp_proxy.py
mcp_servers/: PYDANTIC_CLIENT_GUIDE.md  README.md  __init__.py  agricultural_server.py  api_utils.py  forecast_server.py  historical_server.py  mock_weather_utils.py  models.py  requirements.txt  sample_client.py  sample_pydantic_client.py  start_mcp_servers.sh  test_client.sh  test_server.py  test_simple.py
mcp_servers/utils/: __init__.py  api_client.py  date_utils.py  display.py  weather_utils.py
mcp_servers_workflows/: IMPORT_ISSUES.md  __init__.py  agricultural_server.py  requirements.txt  weather_activity.py  weather_workflows.py
mcp_servers_workflows/utils/: date_utils.py  display.py
models/: __init__.py  api_models.py  conversation.py  conversation_models.py  conversation_persistence.py  mcp_models.py  message_types.py  tool_definitions.py  trajectory.py  types.py  workflow_models.py
scripts/: run_api_local.sh  run_mcp_server.py  run_mcp_servers.py  run_tests.sh  run_worker.py  stop_mcp_server.py  stop_mcp_servers.py  stop_services.sh  test_mcp_integration.sh
shared/: __init__.py  config.py  console_utils.py  llm_utils.py  logging_config.py  mcp_client_manager.py  mcp_client_manager_v2.py  metrics.py  models.py
shared/tool_utils/: __init__.py  agriculture_tool_set.py  base_tool.py  base_tool_sets.py  ecommerce_tool_set.py  events_tool_set.py  mcp_tool.py  registry.py
tests/: __init__.py  conftest.py  test_integration.py  test_mcp_client_manager.py  test_phase1_foundation.py  test_phase2_interaction.py  test_phase3_state_management.py
tests/activities/: test_mcp_execution_activity.py
tests/agentic_loop/: test_react_agent.py
tests/e2e/: conftest.py  test_full_conversation_flow.py  test_mcp_integration.py
tests/mcp_servers/: test_mock_mode.py
tests/models/: test_conversation.py  test_workflow_models.py
tools/: VALIDATION_GUIDE.md  __init__.py  example_validations.py  find_events.py  give_hint_old.py  guess_location_old.py  mcp_utils.py  validators.py
worker/: __init__.py  main.py
workflows/: __init__.py  agentic_ai_workflow.py  monty_python_workflow.py  simple_agent_workflow.py  test_workflow.py
(+55 files in other folders)
