[tool.poetry]
name = "durable-ai-agent"
version = "0.1.0"
description = "Simplified Durable AI Agent with Temporal"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "activities" },
    { include = "models" },
    { include = "shared" },
    { include = "tools" },
    { include = "workflows" },
    { include = "worker" },
    { include = "mcp_servers" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yourusername/durable-ai-agent/issues"

[tool.poe.tasks]
format = [{cmd = "black ."}, {cmd = "isort ."}]
lint = [{cmd = "black --check ."}, {cmd = "isort --check-only ."}, {ref = "lint-types" }]
lint-types = "mypy --check-untyped-defs --namespace-packages ."
test = "pytest"
mcp-forecast = "python mcp_servers/forecast_server.py"
mcp-historical = "python mcp_servers/historical_server.py"
mcp-agricultural = "python mcp_servers/agricultural_server.py"
mcp-stop.shell = "pkill -f 'mcp_servers/(forecast|historical|agricultural)_server.py' || echo 'No MCP servers were running'"
mcp-all.shell = """
echo 'Starting all MCP servers...'
echo 'Forecast server on http://localhost:7778/mcp'
echo 'Historical server on http://localhost:7779/mcp'
echo 'Agricultural server on http://localhost:7780/mcp'
echo ''
echo 'Press Ctrl+C to stop all servers'
python -c "
import subprocess
import signal
import sys
import time

processes = []

def signal_handler(sig, frame):
    print('\\nStopping all servers...')
    for p in processes:
        p.terminate()
    sys.exit(0)

signal.signal(signal.SIGINT, signal_handler)

try:
    # Start all servers
    processes.append(subprocess.Popen(['python', 'mcp_servers/forecast_server.py']))
    time.sleep(0.5)
    processes.append(subprocess.Popen(['python', 'mcp_servers/historical_server.py']))
    time.sleep(0.5)
    processes.append(subprocess.Popen(['python', 'mcp_servers/agricultural_server.py']))
    
    # Wait for all processes
    for p in processes:
        p.wait()
except KeyboardInterrupt:
    pass
"
"""

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
temporalio = "^1.8.0"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
httpx = "^0.28.1"
fastmcp = "^2.10.4"
dspy = "3.0.0b2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2"
pytest-asyncio = "^0.26.0"
black = "^23.7"
isort = "^5.12"
mypy = "^1.0"
poethepoet = "^0.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "integration_tests"]
asyncio_mode = "auto"
markers = [
    "api: marks tests that require the API server to be running",
    "workflow: marks tests that test workflow functionality",
    "integration: marks integration tests that may require external services",
    "slow: marks tests that take longer to run",
]